Allow uploading of multiple images in one go
The image file upload now supports uploading of images in one go.  This
could improve some workflows.

--- a/app/components/poi-picture-manipulator.hbs
+++ b/app/components/poi-picture-manipulator.hbs
@@ -64,5 +64,5 @@
 </div>
 
 <div class="au-o-box au-o-box--small">
-  <AuFileUpload @onFinishUpload={{this.uploadedFile}} @maxFileSizeMB="1024" />
+  <AuFileUpload @onFinishUpload={{this.uploadedFile}} @maxFileSizeMB="1024" @multiple={{true}} />
 </div>
