--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -67,7 +67,9 @@ $au-outline: .3rem solid #c48a00;
 @import "ember-appuniversum/c-input";
 @import "ember-appuniversum/c-label";
 @import "ember-appuniversum/c-link";
+@import "ember-appuniversum/c-nav-link";
 @import "ember-appuniversum/c-list-horizontal";
+@import "ember-appuniversum/c-list-responsive";
 @import "ember-appuniversum/c-list-navigation";
 @import "ember-appuniversum/c-loader";
 @import "ember-appuniversum/c-pagination";
