--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -1,3 +1,5 @@
+{{page-title "Mock login – Toegankelijk Vlaanderen"}}
+
 <div class="au-c-main-container__content au-c-main-container__content--scroll">
   <main id="content">
     <AuContentHeader @titlePartOne="Vlaanderen" @titlePartTwo="is gelijke kansen">
