--- a/app/templates/mock-login/accounts.hbs
+++ b/app/templates/mock-login/accounts.hbs
@@ -1,4 +1,4 @@
-{{page-title "Accounts"}}
+{{page-title "Personen – Toegankelijk Vlaanderen"}}
 
 <AuHeading @skin="2" class="au-u-margin-bottom">Log in als persoon</AuHeading>
 
