--- a/app/templates/mock-login/pois.hbs
+++ b/app/templates/mock-login/pois.hbs
@@ -1,4 +1,4 @@
-{{page-title "Mock login by point of interest"}}
+{{page-title "Mock login – Toegankelijk Vlaanderen"}}
 
 <AuHeading @skin="2" class="au-u-margin-bottom">Log in als museum</AuHeading>
 
