--- a/app/templates/people/index.hbs
+++ b/app/templates/people/index.hbs
@@ -1,4 +1,4 @@
-{{page-title "Gebruikersbeheer"}}
+{{page-title "Gebruikersbeheer – Toegankelijk Vlaanderen"}}
 
 <div class="au-c-main-container__content"  id="content">
   <AuToolbar @size="medium" @skin="tint" @border="bottom" class="au-c-toolbar__breadcrumbs">
