--- a/app/templates/people/show.hbs
+++ b/app/templates/people/show.hbs
@@ -1,4 +1,4 @@
-{{page-title "Bewerk persoon"}}
+{{page-title "Bewerk persoon – Toegankelijk Vlaanderen"}}
 
 <div class="au-c-main-container__content"  id="content">
   <AuToolbar @size="medium" @skin="tint" @border="bottom" class="au-c-toolbar__breadcrumbs">
