--- a/app/templates/poi/show/experiences/index.hbs
+++ b/app/templates/poi/show/experiences/index.hbs
@@ -1,3 +1,5 @@
+{{page-title "Tentoonstelling – Toegankelijk Vlaanderen"}}
+
 <div class="au-o-box au-c-body-container au-c-body-container--scroll au-c-theme-gray-100 au-u-no-focus" id="panel-2" role="tabpanel" aria-labelledby="tab-2" tabindex="0" {{auto-focus}}>
   <AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
     Tentoonstelling
