--- a/app/templates/poi/show/experiences/new.hbs
+++ b/app/templates/poi/show/experiences/new.hbs
@@ -1,3 +1,5 @@
+{{page-title "Nieuwe tentoonstelling – Toegankelijk Vlaanderen"}}
+
 <div class="au-o-box au-c-body-container au-c-body-container--scroll au-c-theme-gray-100">
   <AuToolbar class="au-u-margin-bottom">
     <AuToolbarGroup>
