--- a/app/templates/poi/show/history/index.hbs
+++ b/app/templates/poi/show/history/index.hbs
@@ -1,4 +1,4 @@
-{{page-title "Index"}}
+{{page-title "Historiek – Toegankelijk Vlaanderen"}}
 
 <div class="au-o-box au-c-body-container au-c-body-container--scroll au-c-theme-gray-100 au-u-no-focus" id="panel-3" role="tabpanel" aria-labelledby="tab-3" tabindex="0" {{auto-focus}}>
   <AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
