--- a/app/templates/poi/show/tree.hbs
+++ b/app/templates/poi/show/tree.hbs
@@ -1,3 +1,5 @@
+{{page-title "Toegankelijkheidsdata – Toegankelijk Vlaanderen"}}
+
 <div class="au-c-body-container au-c-theme-gray-100 au-u-no-focus" id="panel-1" role="tabpanel" aria-labelledby="tab-1" tabindex="0" {{auto-focus}}>
   <AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
     Toegankelijkheidsdata
