--- a/app/styles/ember-appuniversum/_c-icon.scss
+++ b/app/styles/ember-appuniversum/_c-icon.scss
@@ -14,6 +14,7 @@ $au-icon-size-large  : 1.9rem !default;
    ========================================================================== */
 
 .au-c-icon {
+  flex: none;
   display: inline-block;
   width: $au-icon-size;
   height: $au-icon-size;
