--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -1,105 +1,97 @@
+{{page-title "Gebouwen – Toegankelijk Vlaanderen"}}
+
 <div class="au-c-main-container__content au-c-main-container__content--scroll">
-  <AuToolbar @size="medium" @skin="tint" @border="bottom" class="au-c-toolbar__breadcrumbs">
-    <AuToolbarGroup>
-      <ul class="au-c-list-horizontal">
-        <li class="au-c-list-horizontal__item">
-          <AuLink @linkRoute="index" @skin="secondary">
-            <AuIcon @icon="arrow-left" @alignment="left" />
-            Home
-          </AuLink>
-        </li>
-        <li class="au-c-list-horizontal__item">
-          <strong>Gebouwen</strong>
-        </li>
-      </ul>
-    </AuToolbarGroup>
-  </AuToolbar>
-  <section class="au-o-region-large">
-    <div class="au-o-layout au-o-layout--large">
-      <AuContent>
-        <AuHeading>Gebouwen</AuHeading>
-      </AuContent>
-      <hr class="au-c-hr">
-      <div class="au-o-grid">
-        <div class="au-o-grid__item au-u-1-4@medium">
-          <ul class="au-c-list-navigation">
-            <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="buildings">
-                Musea
-              </AuNavigationLink>
-            </li>
-          </ul>
-        </div>
-        <div class="au-o-grid__item au-u-3-4@medium">
-          <AuContent id="content" class="au-u-margin-bottom-small">
-            <p>De volgende musea hebben toegankelijkheidsinformatie:</p>
-          </AuContent>
-          <ul class="au-o-grid au-o-grid--tiny">
-            {{#each @model as |widget|}}
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        {{widget.pointOfInterest.label}}
-                      </AuHeading>
-                    </AuToolbarGroup>
-                    <AuToolbarGroup>
-                      <p>
-                        URI:
-                        <AuPill>
-                          {{widget.uri}}
-                        </AuPill>
-                      </p>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
+  <Navigation />
+
+  <main id="content">
+    <section class="au-o-region-large">
+      <div class="au-o-layout au-o-layout--large">
+        <AuContent>
+          <AuHeading>Gebouwen</AuHeading>
+        </AuContent>
+        <hr class="au-c-hr">
+        <div class="au-o-grid">
+          <div class="au-o-grid__item au-u-1-4@medium">
+            <ul class="au-c-list-navigation">
+              <li class="au-c-list-navigation__item">
+                <AuNavigationLink @linkRoute="buildings">
+                  Musea
+                </AuNavigationLink>
               </li>
-            {{/each}}
-          </ul>
+            </ul>
+          </div>
+          <div class="au-o-grid__item au-u-3-4@medium">
+            <AuContent id="content" class="au-u-margin-bottom-small">
+              <p>De volgende musea hebben toegankelijkheidsinformatie:</p>
+            </AuContent>
+            <ul class="au-o-grid au-o-grid--tiny">
+              {{#each @model as |widget|}}
+                <li class="au-o-grid__item">
+                  <article class="au-c-card">
+                    <AuToolbar @border="bottom" @size="small">
+                      <AuToolbarGroup>
+                        <AuHeading @level="2" @skin="4">
+                          {{widget.pointOfInterest.label}}
+                        </AuHeading>
+                      </AuToolbarGroup>
+                      <AuToolbarGroup>
+                        <p>
+                          URI:
+                          <AuPill>
+                            {{widget.uri}}
+                          </AuPill>
+                        </p>
+                      </AuToolbarGroup>
+                    </AuToolbar>
+                  </article>
+                </li>
+              {{/each}}
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="au-o-region-large au-c-theme-gray-200">
-    <div class="au-o-layout au-o-layout--large">
-      <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Integreer informatie over jouw toegankelijke locatie in je website.</AuHeading>
-      <div class="au-o-grid au-o-grid--small">
-        <div class="au-o-grid__item au-u-1-2@small">
-          <AuCard class="au-u-text-center">
-            <AuBadge @icon="users" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
-            <AuContent>
-              <AuHeading @level="2" @skin="4">
-                Voor ontwikkelaars
-              </AuHeading>
-              <p class="au-u-margin-top-tiny">Hier vind je meer informatie over hoe je de widget kan integreren in je website.</p>
-              <p>
-                <LinkTo @route="developers.intro" class="au-c-button au-c-button--secondary">
-                  Handleiding
-                </LinkTo>
-              </p>
-            </AuContent>
-          </AuCard>
-        </div>
-
-        <div class="au-o-grid__item au-u-1-2@small">
-          <AuCard class="au-u-text-center">
-            <AuBadge @icon="export" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
-            <AuContent>
-              <AuHeading @level="2" @skin="4">
-                API
-              </AuHeading>
-              <p class="au-u-margin-top-tiny">Gebruik onze open en gelinkte data om je eigen applicatie of website te bouwen.</p>
-              <p>
-                <AuPill class="au-c-faded">Informatie over de API is binnenkort beschikbaar.</AuPill>
-              </p>
-            </AuContent>
-          </AuCard>
+    <section class="au-o-region-large au-c-theme-gray-200">
+      <div class="au-o-layout  au-o-layout--large">
+        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Integreer informatie over jouw toegankelijk gebouw in je website.</AuHeading>
+        <div class="au-o-grid au-o-grid--small">
+          <div class="au-o-grid__item au-u-1-2@small">
+            <AuCard class="au-u-text-center">
+              <AuBadge @icon="pencil" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
+              <AuContent>
+                <AuHeading @level="3" @skin="4">
+                  Data opmeten en invoeren
+                </AuHeading>
+                <p class="au-u-margin-top-tiny">Lees hoe je zelf kan starten met opmeten en invoeren van de gegevens van jouw locatie.</p>
+                <p>
+                  <LinkTo @route="get-started" class="au-c-button ">
+                    Aan de slag
+                  </LinkTo>
+                </p>
+              </AuContent>
+            </AuCard>
+          </div>
+          <div class="au-o-grid__item au-u-1-2@small">
+            <AuCard class="au-u-text-center">
+              <AuBadge @icon="users" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
+              <AuContent>
+                <AuHeading @level="3" @skin="4">
+                  Voor ontwikkelaars
+                </AuHeading>
+                <p class="au-u-margin-top-tiny">Hier vind u meer informatie over hoe je de toegankelijkheidswijzer kan integreren in uw website.</p>
+                <p>
+                  <LinkTo @route="developers.intro" class="au-c-button">
+                    Integratie handleiding
+                  </LinkTo>
+                </p>
+              </AuContent>
+            </AuCard>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <AuMainFooter>
     <AuHeading @level="3" @skin="4">
