--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -1,92 +1,84 @@
+{{page-title "Voor ontwikkelaars – Toegankelijk Vlaanderen"}}
+
 <div class="au-c-main-container__content au-c-main-container__content--scroll">
-  <AuToolbar @size="medium" @skin="tint" @border="bottom" class="au-c-toolbar__breadcrumbs">
-    <AuToolbarGroup>
-      <ul class="au-c-list-horizontal">
-        <li class="au-c-list-horizontal__item">
-          <AuLink @linkRoute="index" @skin="secondary">
-            <AuIcon @icon="arrow-left" @alignment="left" />
-            Home
-          </AuLink>
-        </li>
-        <li class="au-c-list-horizontal__item">
-          <strong>Voor ontwikkelaars</strong>
-        </li>
-      </ul>
-    </AuToolbarGroup>
-  </AuToolbar>
-  <section class="au-o-region-large">
-    <div class="au-o-layout au-o-layout--large">
-      <AuContent>
-        <AuHeading>Voor ontwikkelaars</AuHeading>
-      </AuContent>
-      <hr class="au-c-hr">
-      <div class="au-o-grid">
-        <div class="au-o-grid__item au-u-1-4@medium">
-          <ul class="au-c-list-navigation">
-            <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="developers.intro">
-                Widget integreren
-              </AuNavigationLink>
-            </li>
-            <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="developers.styling">
-                Stijl aanpassen
-              </AuNavigationLink>
-            </li>
-            <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="developers.plaatsing">
-                Plaatsing van de widget
-              </AuNavigationLink>
-            </li>
-          </ul>
-        </div>
-        <div class="au-o-grid__item au-u-3-4@medium">
-          <AuContent id="content">
-            {{outlet}}
-          </AuContent>
+  <Navigation />
+
+  <main id="content">
+    <section class="au-o-region-large">
+      <div class="au-o-layout au-o-layout--large">
+        <AuContent>
+          <AuHeading>Voor ontwikkelaars</AuHeading>
+        </AuContent>
+        <hr class="au-c-hr">
+        <div class="au-o-grid">
+          <div class="au-o-grid__item au-u-1-4@medium">
+            <ul class="au-c-list-navigation">
+              <li class="au-c-list-navigation__item">
+                <AuNavigationLink @linkRoute="developers.intro">
+                  Widget integreren
+                </AuNavigationLink>
+              </li>
+              <li class="au-c-list-navigation__item">
+                <AuNavigationLink @linkRoute="developers.styling">
+                  Stijl aanpassen
+                </AuNavigationLink>
+              </li>
+              <li class="au-c-list-navigation__item">
+                <AuNavigationLink @linkRoute="developers.plaatsing">
+                  Plaatsing van de widget
+                </AuNavigationLink>
+              </li>
+            </ul>
+          </div>
+          <div class="au-o-grid__item au-u-3-4@medium">
+            <AuContent id="content">
+              {{outlet}}
+            </AuContent>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="au-o-region-large au-c-theme-gray-200">
-    <div class="au-o-layout au-o-layout--large">
-      <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Integreer informatie over jouw toegankelijk gebouw in je website.</AuHeading>
-      <div class="au-o-grid au-o-grid--small">
-        <div class="au-o-grid__item au-u-1-2@small">
-          <AuCard class="au-u-text-center">
-            <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
-            <AuContent>
-              <AuHeading @level="2" @skin="4">
-                Gebouwen
-              </AuHeading>
-              <p class="au-u-margin-top-tiny">Een overzicht van de gebouwen waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
-              <p>
-                <LinkTo @route="buildings" class="au-c-button">
-                  Zoek een gebouw
-                </LinkTo>
-              </p>
-            </AuContent>
-          </AuCard>
-        </div>
-
-        <div class="au-o-grid__item au-u-1-2@small">
-          <AuCard class="au-u-text-center">
-            <AuBadge @icon="export" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
-            <AuContent>
-              <AuHeading @level="2" @skin="4">
-                API
-              </AuHeading>
-              <p class="au-u-margin-top-tiny">Gebruik onze open en gelinkte data om uw eigen applicatie of website te bouwen.</p>
-              <p>
-                <AuPill class="au-c-faded">Informatie over de API is binnenkort beschikbaar.</AuPill>
-              </p>
-            </AuContent>
-          </AuCard>
+    <section class="au-o-region-large au-c-theme-gray-200">
+      <div class="au-o-layout  au-o-layout--large">
+        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Integreer informatie over jouw toegankelijk gebouw in je website.</AuHeading>
+        <div class="au-o-grid au-o-grid--small">
+          <div class="au-o-grid__item au-u-1-2@small au-u-1-2@medium">
+            <AuCard class="au-u-text-center">
+              <AuBadge @icon="pencil" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
+              <AuContent>
+                <AuHeading @level="3" @skin="4">
+                  Data opmeten en invoeren
+                </AuHeading>
+                <p class="au-u-margin-top-tiny">Lees hoe je zelf kan starten met opmeten en invoeren van de gegevens van jouw locatie.</p>
+                <p>
+                  <LinkTo @route="get-started" class="au-c-button ">
+                    Aan de slag
+                  </LinkTo>
+                </p>
+              </AuContent>
+            </AuCard>
+          </div>
+          <div class="au-o-grid__item au-u-1-2@small au-u-1-2@medium">
+            <AuCard class="au-u-text-center">
+              <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
+              <AuContent>
+                <AuHeading @level="3" @skin="4">
+                  Gebouwen
+                </AuHeading>
+                <p class="au-u-margin-top-tiny">Een overzicht van de gebouwen waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
+                <p>
+                  <LinkTo @route="buildings" class="au-c-button ">
+                    Zoek een gebouw
+                  </LinkTo>
+                </p>
+              </AuContent>
+            </AuCard>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <AuMainFooter>
     <AuHeading @level="3" @skin="4">
