--- a/app/templates/legal/cookiestatement.hbs
+++ b/app/templates/legal/cookiestatement.hbs
@@ -1,3 +1,5 @@
+{{page-title "Cookieverklaring – Toegankelijk Vlaanderen"}}
+
 <AuContent class="au-u-3-4@medium">
   <AuHeading>Cookieverklaring</AuHeading>
   <h2>Cookiebeleid van Agentschap Binnenlands Bestuur</h2>
