--- a/app/templates/legal/disclaimer.hbs
+++ b/app/templates/legal/disclaimer.hbs
@@ -1,3 +1,5 @@
+{{page-title "Disclaimer – Toegankelijk Vlaanderen"}}
+
 <AuContent class="au-u-3-4@medium">
   <AuHeading>Disclaimer</AuHeading>
   <h2>Gebruik van de website</h2>
