--- a/app/templates/legal/toegankelijkheidsverklaring.hbs
+++ b/app/templates/legal/toegankelijkheidsverklaring.hbs
@@ -1,3 +1,5 @@
+{{page-title "Toegankelijkheidsverklaring – Toegankelijk Vlaanderen"}}
+
 <AuContent class="au-u-3-4@medium">
   <AuHeading>Toegankelijkheidsverklaring</AuHeading>
   <p>
