--- a/app/templates/poi/edit.hbs
+++ b/app/templates/poi/edit.hbs
@@ -1,3 +1,5 @@
+{{page-title "Locatie aanpassen – Toegankelijk Vlaanderen"}}
+
 <div class="au-c-main-container__content au-c-main-container__content--scroll"  id="content">
   <AuToolbar @border="bottom" @skin="tint" @size="medium">
     <AuToolbarGroup>
