--- a/app/templates/poi/index.hbs
+++ b/app/templates/poi/index.hbs
@@ -1,3 +1,5 @@
+{{page-title "Locaties – Toegankelijk Vlaanderen"}}
+
 <div class="au-c-main-container__content"  id="content">
   <AuToolbar @border="bottom" @size="large">
     <AuToolbarGroup>
