--- a/app/templates/roadmap.hbs
+++ b/app/templates/roadmap.hbs
@@ -1,3 +1,5 @@
+{{page-title "Roadmap – Toegankelijk Vlaanderen"}}
+
 <div class="au-c-main-container__content au-c-main-container__content--scroll">
   <main id="content">
     <AuToolbar @size="medium" @skin="tint" @border="bottom" class="au-c-toolbar__breadcrumbs">
