--- a/app/templates/session/roles.hbs
+++ b/app/templates/session/roles.hbs
@@ -1,4 +1,4 @@
-{{page-title "Roles"}}
+{{page-title "Rollen – Toegankelijk Vlaanderen"}}
 
 <div class="au-c-main-container__content au-c-main-container__content--scroll">
   <main id="content">
