--- a/app/templates/widget.hbs
+++ b/app/templates/widget.hbs
@@ -53,7 +53,7 @@
               <p class="au-u-margin-top-small">We gaan voor een positieve benadering van de informatie. Daarom zullen enkel de belangrijkste knelpunten de score van de gebouwonderdelen beïnvloeden. Het kan dus zijn dat een criterium een ‘x’ krijgt omdat het eigenlijk niet in orde is volgens de norm, maar dat dit niet scorebepalend is. Vb. een balie in een museum die geen laag deel heeft zal een ‘x’ krijgen voor dat criterium maar dit zal de score van de inkom niet negatief beïnvloeden.</p>
             </AuContent>
             <div class="au-c-image au-u-margin-top">
-              <img src="/assets/images/toevla-widget-scores.png" alt="Screenshot van de toegankelijkheidswijzer">
+              <img src="/assets/images/toevla-widget-scores.png" alt="Screenshot van de score logica in de toegankelijkheidswijzer">
             </div>
           </div>
           <div class="au-o-grid__item au-u-1-3@small">
@@ -62,7 +62,7 @@
               <p class="au-u-margin-top-small">De highlights zijn de iconen die boven aan de widget weergegeven kunnen worden. Deze iconen verschijnen enkel als er voor dat specifiek criterium informatie beschikbaar is (vb. wifi beschikbaar) of als een gebouwonderdeel een positieve score krijgt (vb. rolstoelvriendelijk toilet). In totaal zijn er 13 highlights die een museum kan bekomen.</p>
             </AuContent>
             <div class="au-c-image au-u-margin-top">
-              <img src="/assets/images/toevla-widget-highlights.png" alt="Screenshot van de toegankelijkheidswijzer">
+              <img src="/assets/images/toevla-widget-highlights.png" alt="Screenshot van highlights in de toegankelijkheidswijzer">
             </div>
           </div>
           <div class="au-o-grid__item au-u-1-3@small">
