--- a/app/templates/get-started.hbs
+++ b/app/templates/get-started.hbs
@@ -18,10 +18,13 @@
                 Zijn de activiteiten toegankelijk voor mij?<br>
                 Is er een aanbod op maat?
               </p>
-              <p>Toegankelijk Vlaanderen helpt om de toegankelijkheidsinformatie van locaties te verzamelen en correct weer te geven. Bezoekers kunnen die betrouwbare informatie eenvoudig raadplegen dankzij een uniforme weergave.</p>
+              <p>Toegankelijk Vlaanderen verzamelt de toegankelijkheidsinformatie en geeft deze uniform weer. Bezoekers kunnen deze betrouwbare informatie eenvoudig raadplegen via de toegankelijkheidswijzer.</p>
               <h2 class="au-c-heading au-c-heading--3">Data opmeten en invoeren</h2>
-              <p>Via de nieuwe invoerapplicatie kan je als museumverantwoordelijke zelf aan de slag. Je kan de toegankelijkheidsdata van je locatie zelf verzamelen en invoeren. Inter is er om je te ondersteunen bij vragen en om de ingevoerde data te valideren vooraleer deze online weer te geven.</p>
-              <p>Dankzij een stukje code op je website is het mogelijk om de toegankelijkheidsinformatie (widget) rechtstreeks weer te geven. Hoe je dit kan doen staat omschreven onder de ‘Technische integratie’. </p>
+              <p>Je kan als museumverantwoordelijke zelf de verzamelde toegankelijkheidsdata invoeren in de nieuwe invoerapplicatie. Inter ondersteunt je indien je vragen hebt en plaatst de data -na validatie- online.</p>
+              <p>Er is een handleiding beschikbaar om zelf informatie te verzamelen:</p>
+              <ul class="au-u-margin-top-small">
+                <li>OPMETEN en VERZAMELEN data <AuPill>Opgelet – handleiding staat niet online</AuPill></li>
+              </ul>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium au-u-visible-medium-up">
@@ -93,7 +96,7 @@
       <div class="au-o-layout au-o-layout--large">
         <AuContent @skin="large" class="au-u-content-center">
           <h2>Zin om aan de slag te gaan?</h2>
-          <p>Wil jij ook meewerken aan het informeren van bezoekers over de toegankelijkheid van musea? Schrijf je in via het <AuLink @linkRoute="contact">inschrijfformulier</AuLink> en je ontvangt de nodige informatie.</p>
+          <p>Vul dan het <AuLink @linkRoute="contact">inschrijfformulier</AuLink> in en je ontvangt de nodige informatie.</p>
         </AuContent>
       </div>
     </section>
