--- a/app/templates/get-started/case2.hbs
+++ b/app/templates/get-started/case2.hbs
@@ -8,11 +8,12 @@
   <p>Waar kan ik terecht? Hoe kan ik de informatie raadplegen? Welke informatie kan ik verwachten?
   </p>
 
-  <p>
-    Bekijk het <AuLink @linkRoute="buildings">gebouw overzicht</AuLink>
+  <p class="au-u-margin-top-tiny">
+    Bekijk <AuLink @linkRoute="buildings">het overzicht van de gebouwen</AuLink>
   </p>
-  <ul>
-    <li>Al de musea die beschikken over een widget zijn in deze lijst opgenomen.</li>
-    <li>Dit is een actieve lijst. Telkens als er een locatie online komt dan wordt deze aan de lijst toegevoegd.</li>
+
+  <ul class="au-u-margin-top-tiny">
+    <li>De musea die beschikken over een widget zijn in deze lijst opgenomen. Telkens als er een locatie online komt, wordt deze aan de lijst toegevoegd.</li>
+    <li>Je kan een gebouw naar keuze aanklikken en de toegankelijkheidsinformatie bekijken.</li>
   </ul>
 </div>
