--- a/app/templates/get-started/case3.hbs
+++ b/app/templates/get-started/case3.hbs
@@ -8,7 +8,6 @@
   <p>
     Waar kan ik terecht? Hoe kan ik de informatie integreren?
   </p>
-  <ul>
-    <li>Al de informatie die hiervoor nodig is kan je raadplegen via de <AuLink @linkRoute="developers.intro">informatie voor ontwikkelaars</AuLink>.</li>
-  </ul>
+
+  <p class="au-u-margin-top-tiny">Ontwikkelaars kunnen de informatie over technische integratie raadplegen op <AuLink @linkRoute="developers.intro">de pagina's voor ontwikkelaars</AuLink>.</p>
 </div>
