--- a/app/templates/get-started/index.hbs
+++ b/app/templates/get-started/index.hbs
@@ -9,46 +9,34 @@
 
   <ol class="au-c-numbered-list">
     <li class="au-c-numbered-list__item">
-      <strong>Stap 1</strong> – Informeer jezelf over wat het inhoud om deze informatie te verzamelen en in te voeren.
-      <ul>
-        <li>
-          De museumverantwoordelijke gaat zelf aan de slag
-          <ul>
-            <li>Informatie verzamelen (opmeten)</li>
-            <li>Informatie invoeren</li>
-          </ul>
-        </li>
-        <li>Inter zorgt voor de validatie van de gegevens en het publiceren ervan.</li>
-        <li>Het effectief tonen van de informatie op de website van het museum kan door een stukje code te integreren in je website. Hoe je dit kan doen kan je nalezen in de <AuLink @linkRoute="developers.intro">informatie voor de ontwikkelaar</AuLink>.</li>
-      </ul>
-    </li>
-    <li class="au-c-numbered-list__item">
-      <strong>Stap 2</strong> – Schrijf je museum in.
+      <p><strong>Stap 1</strong> – Schrijf je museum in.</p>
       <ul>
         <li>Vul het <AuLink @linkRoute="contact">Inschrijfformulier</AuLink> in.</li>
         <li>
-          Dit formulier komt bij Inter terecht. Het is de bevestiging dat je toegankelijkheidsinfo wil verzamelen en invoeren in Toegankelijk Vlaanderen. Dit ingevulde formulier komt bij Inter terecht en is de basis voor:
+          Dit formulier is voor Inter de basis voor:
           <ul>
-            <li>De aanmaak van de accommodatie</li>
-            <li>De registratie van de museumverantwoordelijke(n) – max 2 per accommodatie</li>
-            <li>De facturatie door Inter</li>
+            <li>De aanmaak van de accommodatie (locatie).</li>
+            <li>De registratie van de museumverantwoordelijke(n) (Max. 2 per locatie).</li>
+            <li>De facturatie door Inter.</li>
           </ul>
         </li>
         <li>Je ontvangt via mail een bevestiging van de dossieraanmaak door Inter.</li>
       </ul>
     </li>
     <li class="au-c-numbered-list__item">
-      <strong>Stap 3</strong> – Informatie verzamelen en invoeren
+      <p><strong>Stap 2</strong> – Informatie verzamelen en invoeren</p>
+      <p class="au-u-margin-top-tiny">De museumverantwoordelijke:</p>
       <ul>
-        <li>De museumverantwoordelijke verzamelt de toegankelijkheidsdata over het museum en voert deze in via de invoerapplicatie.</li>
-        <li>Na het invoeren bevestigd de museumverantwoordelijke via mail aan Inter dat het dossier klaar is voor validatie. Dit is een controle van de ingevoerde data en de eindafwerking van het dossier.</li>
+        <li>Verzamelt de toegankelijkheidsdata.</li>
+        <li>Voert de toegankelijkheidsdata in de invoerapplicatie in.</li>
+        <li>Bevestigt via mail aan Inter dat het dossier klaar is voor validatie. Inter controleert de ingevoerde data en verzorgt de afwerking van het dossier.</li>
       </ul>
     </li>
     <li class="au-c-numbered-list__item">
-      <strong>Stap 4</strong> – Online tonen van de widget
+      <p><strong>Stap 3</strong> – Online tonen van de widget</p>
       <ul>
-        <li>Het dossier verschijnt standaard in het <AuLink @linkRoute="buildings">gebouw overzicht</AuLink> na het publiceren (online plaatsen) door Inter</li>
-        <li>Het museum zorgt zelf voor de technische gegevens om de widget online te tonen op hun museum website. Zie info voor de <AuLink @linkRoute="developers.intro">technische integratie</AuLink> de begeleidende nota hierover.</li>
+        <li>Het dossier verschijnt -na het door Inter publiceren van de informatie- standaard in <AuLink @linkRoute="buildings">het overzicht van de gebouwen</AuLink>.</li>
+        <li>Het museum zorgt zelf voor de technische integratie van de widget op zijn website. Raadpleeg de begeleidende nota betreffende de <AuLink @linkRoute="developers.intro">technische integratie</AuLink>.</li>
       </ul>
     </li>
   </ol>
