--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -84,41 +84,17 @@
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
               <h2 class="au-c-heading au-c-heading--3">Data opmeten en invoeren</h2>
-              <p>Via de nieuwe invoerapplicatie kan je als museumverantwoordelijke zelf aan de slag. Je kan de toegankelijkheidsdata van je locatie eerst zelf verzamelen en vervolgens invoeren.</p>
-              <p>Inter is er om je te ondersteunen bij vragen en om de ingevoerde data te valideren vooraleer deze online weer te geven.</p>
-              <p>Als ondersteuning hierbij zijn er twee handleidingen beschikbaar:</p>
+              <p>Je kan als museumverantwoordelijke zelf de verzamelde toegankelijkheidsdata invoeren in de nieuwe invoerapplicatie. Inter ondersteunt je indien je vragen hebt en plaatst de data -na validatie- online.</p>
+              <p>Er is een handleiding beschikbaar om zelf informatie te verzamelen:</p>
               <ul class="au-u-margin-top-small">
-                <li><a href="#!" class="au-c-link">Informatie verzamelen</a></li>
-                <li><a href="#!" class="au-c-link">Informatie invoeren</a></li>
+                <li>OPMETEN en VERZAMELEN data <AuPill>Opgelet – handleiding staat niet online</AuPill></li>
               </ul>
+              <p>De invoerapplicatie van de toegankelijkheidswijzer is enkel beschikbaar voor geregistreerde gebruikers. De museumverantwoordelijke kan er zelf de toegankelijkheidsinformatie van het museum en de tentoonstellingen beheren.  De informatie kan op elk moment geactualiseerd worden.</p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
             <div class="au-c-image au-c-image--transparent">
               <img src="/assets/images/toevla-mockup-entry.png" alt="Screenshot van de invoerapplicatie">
-            </div>
-          </div>
-        </div>
-        <hr class="au-c-hr au-c-hr--huge">
-        <div class="au-o-grid au-o-grid--middle">
-          <div class="au-o-grid__item au-u-1-2@medium">
-            <AuContent @skin="large">
-              <h2 class="au-c-heading au-c-heading--3">Toegankelijkheidswijzer</h2>
-              <p>U kan onze toegankelijkheidswijzer makkelijk integreren in uw website. Zo kan u de bezoekers steeds de meest actuele toegankelijkheidsinformatie meegeven.</p>
-              <ul class="au-u-margin-top-small">
-                <li>We verzamelen informatie rond een vast aantal punten en geven deze weer in een overzichtelijke lijst.</li>
-                <li>We tonen foto’s die de toegankelijkheid van de locatie illustreren.</li>
-              </ul>
-              <p>
-                <LinkTo @route="widget" class="au-c-link">
-                  Lees meer over de toegankelijkheidswijzer
-                </LinkTo>
-              </p>
-            </AuContent>
-          </div>
-          <div class="au-o-grid__item au-u-1-2@medium">
-            <div class="au-c-image au-c-image--transparent">
-              <img src="/assets/images/toevla-mockup.png" alt="Overzicht van de widget met een detail van parkeren en een foto waarop je de ingang ziet van een gebouw.">
             </div>
           </div>
         </div>
@@ -133,6 +109,30 @@
           <div class="au-o-grid__item au-u-1-2@medium">
             <div class="au-c-image">
               <img src="/assets/images/toevla-mockup-data.svg" alt="Illustratie die data blokken data toont die op verschillende plaatsen gebruikt worden">
+            </div>
+          </div>
+        </div>
+        <hr class="au-c-hr au-c-hr--huge">
+        <div class="au-o-grid au-o-grid--middle">
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <AuContent @skin="large">
+              <h2 class="au-c-heading au-c-heading--3">Toegankelijkheidswijzer</h2>
+              <p>De toegankelijkheidswijzer is een vast informatieblok of 'widget' (met museumdata) dat je makkelijk kan integreren in een website. Bezoekers zien steeds de meest actuele toegankelijkheidsinformatie.</p>
+              <ul class="au-u-margin-top-small">
+                <li>Belangrijke informatie wordt bovenaan als icoontjes weergegeven.</li>
+                <li>De toegankelijkheidsinformatie wordt op een compacte manier weergegeven. Je kan de informatieblokken openklappen voor meer details.</li>
+                <li>Een fotogalerij verduidelijkt de beschrijving.</li>
+              </ul>
+              <p>
+                <LinkTo @route="widget" class="au-c-link">
+                  Lees meer over de toegankelijkheidswijzer
+                </LinkTo>
+              </p>
+            </AuContent>
+          </div>
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <div class="au-c-image au-c-image--transparent">
+              <img src="/assets/images/toevla-mockup.png" alt="Overzicht van de widget met een detail van parkeren en een foto waarop je de ingang ziet van een gebouw.">
             </div>
           </div>
         </div>
