--- a/app/templates/get-started/case4.hbs
+++ b/app/templates/get-started/case4.hbs
@@ -9,25 +9,28 @@
 
   <ol class="au-c-numbered-list">
     <li class="au-c-numbered-list__item">
-      <strong>Stap 1</strong> – Laat aan Inter weten je een nieuwe tentoonstelling willen toevoegen.
+      <p><strong>Stap 1</strong> – Laat aan Inter weten je een nieuwe tentoonstelling wilt toevoegen.</p>
       <ul>
         <li>
-          Dit kan via het inschrijfformulier.
+          Gebruik hiervoor het <AuLink @linkRoute="contact">inschrijfformulier</AuLink>.
         </li>
+        <li>Geef aan tegen wanneer je voorziet om de gegevens aan te leveren zo kan Inter de validatie in de planning mee opnemen.</li>
       </ul>
     </li>
     <li class="au-c-numbered-list__item">
-      <strong>Stap 2</strong> – De museumverantwoordelijke verzamelt de toegankelijkheidsdata over de nieuwe tentoonstelling en voert deze in in de invoerapplicatie.
+      <p><strong>Stap 2</strong> – Informatie verzamelen en invoeren</p>
+      <p class="au-u-margin-top-tiny">De museumverantwoordelijke:</p>
       <ul>
-        <li>Na het invoeren bevestigd de museumverantwoordelijke aan Inter dat het dossier klaar is voor validatie.</li>
+        <li>Verzamelt de toegankelijkheidsdata over de nieuwe tentoonstelling.</li>
+        <li>Voert de toegankelijkheidsdata in de invoerapplicatie in.</li>
+        <li>Bevestigt via mail aan Inter dat het dossier klaar is voor validatie.</li>
       </ul>
+      <p class="au-u-margin-top-tiny">Inter controleert de ingevoerde data en verzorgt de afwerking van het dossier.</p>
     </li>
     <li class="au-c-numbered-list__item">
-      <strong>Stap 3</strong> – Inter bekijkt de info, valideert de gegevens en stuurt een bevestiging dat het dossier online komt na x aantal dagen of op de afgesproken datum.
-      <ul>
-        <li>Het dossier verschijnt automatisch met de aanpassingen in het <AuLink @linkRoute="buildings">gebouw overzicht</AuLink></li>
-      </ul>
+      <p><strong>Stap 3</strong> – Inter valideert de gegevens en laat per mail weten wanneer het dossier online komt.</p>
+      <p>Het aangepaste dossier verschijnt daarna in het <AuLink @linkRoute="buildings">gebouwoverzicht</AuLink>.</p>
     </li>
   </ol>
-  <p>Als het museum eerder de technische integratie deed op zijn website dan zullen ook daar de gegevens in de widget automatisch een update krijgen.</p>
+  <p class="au-u-margin-top">Als het museum eerder de technische integratie deed op zijn website dan zullen ook daar de gegevens in de widget automatisch een update krijgen.</p>
 </div>
