--- a/app/templates/widget.hbs
+++ b/app/templates/widget.hbs
@@ -14,10 +14,10 @@
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
               <p class="au-c-intro">
-                De Toegankelijkheidswijzer is een vast informatieblok of 'widget' (met museum data) dat je makkelijk kan integreren in een website. Zo krijgen bezoekers steeds de meest actuele toegankelijkheidsinformatie. 
+                De toegankelijkheidswijzer is een vast informatieblok of 'widget' (met museumdata) dat je makkelijk kan integreren in een website. Bezoekers zien steeds de meest actuele toegankelijkheidsinformatie.
               </p>
               <h2 class="au-c-heading au-c-heading--3">Wat is een widget?</h2>
-              <p>Een widget is een informatieblok of venster dat je kan tonen op je website. In onze toepassing bevat dit blok toegankelijkheidsinformatie. De widget is het resultaat dat we tonen op basis van de data die worden ingegeven in de invoerapplicatie. Dankzij de widget wordt toegankelijkheidsinformatie van verschillende publieke locaties op dezelfde uniforme manier ontsloten.</p>
+              <p>Een widget is een informatieblok dat je kan tonen op je website. In onze toepassing bevat dit blok toegankelijkheidsinformatie. De widget is het resultaat van de data die worden ingegeven in de invoerapplicatie. Dankzij de widget wordt toegankelijkheidsinformatie van verschillende publieke locaties op dezelfde uniforme manier ontsloten.</p>
               <p>Belangrijk is dat we informatie kunnen geven voor iedereen, dat het essentiële, overzichtelijke informatie is en dat we een positieve boodschap kunnen meegeven.</p>
               <p><AuLink @linkRoute="developers.intro">Lees meer over hoe u deze Toegangswijzer (widget) kan integreren</AuLink></p>
             </AuContent>
@@ -33,10 +33,13 @@
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
               <h2 class="au-c-heading au-c-heading--3">Opbouw van de widget</h2>
-              <p class="au-u-margin-top-small">De widget kan als een informatieblok op zich getoond worden. Dankzij een openklapsysteem kan detailinformatie weergegeven of verborgen worden.</p>
-              <p>De toegankelijkheidsinformatie in de widget wordt weergegeven volgens een vaste structuur die voor elk dossier dezelfde is. Namelijk: Algemeen, Bereikbaarheid, Gebouw en Extra.</p>
-              <p>Elk deel in de vaste structuur bevat een aantal gebouwonderdelen. Vb. Beleving, Inkom, Toilet.</p>
-              <p>Elk gebouwonderdeel bestaat op zich uit een aantal criteria. Dat zijn de verschillende elementen waarover we in de widget informatie geven vb. de breedte van een deur of de aanwezigheid van een ringleiding.</p>
+              <p class="au-u-margin-top-small">De toegankelijkheidsinformatie in de widget wordt weergegeven volgens een <strong>vaste, uniforme structuur</strong>. Deze is voor elk gebouw hetzelfde. </p>
+              <p>De widget biedt informatie op 3 manieren aan:</p>
+              <ul>
+                <li><strong>Highlights</strong>. Deze vind je bovenaan, dit zijn iconen die snel een eerste beeld geven van wat aanwezig is in het museum.</li>
+                <li><strong>Een middenblok</strong> met algemene informatie, info over de bereikbaarheid, het gebouw zelf en extra faciliteiten. Dankzij een openklapsysteem kan er nog bijkomende detailinformatie worden weergegeven of verborgen.</li>
+                <li><strong>Foto’s</strong> met een korte verduidelijkende tekst.</li>
+              </ul>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
@@ -49,28 +52,42 @@
         <div class="au-o-grid">
           <div class="au-o-grid__item au-u-1-3@small">
             <AuContent>
-              <h2 class="au-c-heading au-c-heading--3">Score weergave</h2>
-              <p class="au-u-margin-top-small">We gaan voor een positieve benadering van de informatie. Daarom zullen enkel de belangrijkste knelpunten de score van de gebouwonderdelen beïnvloeden. Het kan dus zijn dat een criterium een ‘x’ krijgt omdat het eigenlijk niet in orde is volgens de norm, maar dat dit niet scorebepalend is. Vb. een balie in een museum die geen laag deel heeft zal een ‘x’ krijgen voor dat criterium maar dit zal de score van de inkom niet negatief beïnvloeden.</p>
-            </AuContent>
-            <div class="au-c-image au-u-margin-top">
-              <img src="/assets/images/toevla-widget-scores.png" alt="Screenshot van de score logica in de toegankelijkheidswijzer">
-            </div>
-          </div>
-          <div class="au-o-grid__item au-u-1-3@small">
-            <AuContent>
               <h2 class="au-c-heading au-c-heading--3">Highlights</h2>
-              <p class="au-u-margin-top-small">De highlights zijn de iconen die boven aan de widget weergegeven kunnen worden. Deze iconen verschijnen enkel als er voor dat specifiek criterium informatie beschikbaar is (vb. wifi beschikbaar) of als een gebouwonderdeel een positieve score krijgt (vb. rolstoelvriendelijk toilet). In totaal zijn er 13 highlights die een museum kan bekomen.</p>
+              <p class="au-u-margin-top-small">Deze vind je bovenaan, dit zijn iconen die snel een eerste beeld geven van wat aanwezig is in het museum. Iconen verschijnen enkel als er voor dat specifiek criterium informatie beschikbaar is (vb. wifi beschikbaar) of als een gebouwonderdeel een positieve score krijgt (vb. rolstoelvriendelijk toilet). In totaal zijn er 13 highlights die een museum kan bekomen.</p>
             </AuContent>
             <div class="au-c-image au-u-margin-top">
-              <img src="/assets/images/toevla-widget-highlights.png" alt="Screenshot van highlights in de toegankelijkheidswijzer">
+              <img src="/assets/images/toevla-widget-highlights.jpg" alt="Screenshot van highlights in de toegankelijkheidswijzer">
             </div>
           </div>
           <div class="au-o-grid__item au-u-1-3@small">
             <AuContent>
-              <h2 class="au-c-heading au-c-heading--3">Technische integratie</h2>
-              <p class="au-u-margin-top-small">Dankzij een technisch proces kan je de toegankelijkheidsinformatie integreren op de website worden weergegeven. Hiervoor moet een stukje code worden opgenomen in één van de pagina’s van de website. Bekijk hiervoor de <AuLink @linkRoute="developers.intro">technische informatie</AuLink>.</p>
+              <h2 class="au-c-heading au-c-heading--3">Middenblok</h2>
+              <p class="au-u-margin-top-small">Het vaste middenblok omvat algemene informatie, info over de bereikbaarheid, het gebouw zelf en extra faciliteiten. Dankzij een openklapsysteem kan bijkomende detailinformatie worden weergegeven of verborgen. We gaan voor een positieve benadering van de informatie en beperken ons tot de weergave van knelpunten waar het noodzakelijk is.</p>
             </AuContent>
             <div class="au-c-image au-u-margin-top">
+              <img src="/assets/images/toevla-widget-middenblok.jpg" alt="Screenshot het middenblok in de toegankelijkheidswijzer">
+            </div>
+          </div>
+          <div class="au-o-grid__item au-u-1-3@small">
+            <AuContent>
+              <h2 class="au-c-heading au-c-heading--3">Foto’s</h2>
+              <p class="au-u-margin-top-small">Onderaan de widget zijn foto’s aanwezig met een korte verduidelijkende tekst op de foto. Deze fotogalerij bevat zowel sfeerbeelden als extra beeldmateriaal over eventuele knelpunten en aanvullende beelden over de toegankelijkheid.</p>
+            </AuContent>
+            <div class="au-c-image au-u-margin-top">
+              <img src="/assets/images/toevla-widget-fotos.jpg" alt="Screenshot van de foto blok in de toegankelijkheidswijzer">
+            </div>
+          </div>
+        </div>
+        <hr class="au-c-hr au-c-hr--huge">
+        <div class="au-o-grid au-o-grid--middle au-o-grid--reverse">
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <AuContent @skin="large">
+              <h2 class="au-c-heading au-c-heading--3">Technische integratie</h2>
+              <p class="au-u-margin-top-small">Je kan de toegankelijkheidsinformatie makkelijk integreren op je website. Hiervoor moet een stukje code worden opgenomen in één van de pagina’s van je website. Raadpleeg hiervoor de <AuLink @linkRoute="developers.intro">technische informatie</AuLink>.</p>
+            </AuContent>
+          </div>
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <div class="au-c-image au-c-image--transparent">
               <img src="/assets/images/toevla-widget-website.png" alt="Screenshot van de toegankelijkheidspagina van STAM">
             </div>
           </div>
