update content on get-started

--- a/app/templates/get-started.hbs
+++ b/app/templates/get-started.hbs
@@ -38,10 +38,11 @@
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
               <h2 class="au-c-heading au-c-heading--3">Toegankelijkheidswijzer</h2>
-              <p>U kan onze toegankelijkheidswijzer makkelijk integreren in uw website. Zo kan u de bezoekers steeds de meest actuele toegankelijkheidsinformatie meegeven.</p>
+              <p>De toegankelijkheidswijzer is een vast informatieblok of 'widget' (met museumdata) dat je makkelijk kan integreren in een website. Bezoekers zien steeds de meest actuele toegankelijkheidsinformatie.</p>
               <ul class="au-u-margin-top-small">
-                <li>We verzamelen informatie rond een vast aantal punten en geven deze weer in een overzichtelijke lijst.</li>
-                <li>We tonen foto’s die de toegankelijkheid van de locatie illustreren.</li>
+                <li>Belangrijke informatie wordt bovenaan als icoontjes weergegeven.</li>
+                <li>De toegankelijkheidsinformatie wordt op een compacte manier weergegeven. Je kan de informatieblokken openklappen voor meer details.</li>
+                <li>Een fotogalerij verduidelijkt de beschrijving.</li>
               </ul>
               <p>
                 <LinkTo @route="widget" class="au-c-link">
